--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,7 @@ header {
 
 .main-bar {
   background-color: #00a0e4;
+  flex-direction: row;
 }
 
 .logo {
@@ -38,7 +39,18 @@ header {
   margin-right: 20px;
 }
 
+.cad-login{
+    text-align: justify;
+    font-size: 8px;
+}
+
+.icon-user{
+    font-size: 1.25rem;
+    margin-right: .3125rem;
+}
+
 .cart {
+  margin-left: 1.875rem;
   font-size: 1.8rem;
   color: white;
 }
