--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,10 @@ header {
   text-align: center;
 }
 
+.navbar-edit {
+  height: 5rem;
+}
+
 .navbar-custom {
   background-color: var(--primary-color); /* Cor de fundo personalizada */
 }
