--- a/app/index.css
+++ b/app/index.css
@@ -1,75 +1,106 @@
 :root {
-    --primary-color: #1899d5;
-    --secondary-color: #e5e5e5;
-    --accent-color: #e74c3c; /* Vermelho de destaque */
-    --background-color: #ecf0f1; /* Cor de fundo */
-    --text-color: #2c3e50; /* Cor do texto */
-    --header-color: #1abc9c; /* Cor do cabeçalho */
-    --footer-color: #34495e; /* Cor do rodapé */
-  }  
+  --primary-color: #1899d5;
+  --secondary-color: #e5e5e5;
+  --accent-color: #e74c3c; /* Vermelho de destaque */
+  --background-color: #ecf0f1; /* Cor de fundo */
+  --text-color: #2c3e50; /* Cor do texto */
+  --header-color: #1abc9c; /* Cor do cabeçalho */
+  --footer-color: #34495e; /* Cor do rodapé */
+}
 
 .top-bar {
-    background-color: #000;
-    color: var(--primary-color);
-    text-align: center;
-  }
+  background-color: #000;
+  color: var(--primary-color);
+  text-align: center;
+  height: 2.1875rem;
+}
 
-  header i {
-    font-size: 30px;
-  }
-  
-  header i:hover {
-    cursor: pointer; /* Mudar o cursor para indicar que é clicável */
-    font-size: 2.5rem;
-  }
+header i {
+  font-size: 30px;
+}
 
-  .navbar img {
-    height: 50px; /* Ajuste a altura da imagem conforme necessário */
-  }
+header i:hover {
+  cursor: pointer; /* Mudar o cursor para indicar que é clicável */
+  font-size: 2.5rem;
+}
 
+.navbar-roll{
+  top: 0;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+}
+.navbar img {
+  height: 50px; /* Ajuste a altura da imagem conforme necessário */
+}
+
+.menu-list {
+  display: none;
+}
+
+.menu-list-items a {
+  padding: 0.3125rem;
+  transition: font-size 0.3s ease;
+}
+
+.menu-list-items a:hover {
+  font-size: 1.25rem;
+}
+
+.img-desktop {
+  width: 100%;
+  object-fit: cover; /* Ajusta a imagem para cobrir o contêiner */
+}
+
+.img-smart {
+  display: none;
+  object-fit: cover;
+}
+
+.e-bit-div {
+  margin-top: 6.25rem;
+  font-size: 1.25rem;
+}
+
+.suplementos-div {
+  margin-top: 5.625rem;
+}
+
+.suplemento p {
+  margin-top: 10px;
+  text-align: center;
+}
+
+
+.suplemento img {
+  height: 12.5rem;
+}
+
+@media (max-width: 1024px) {
   .menu-list {
+    display: flex;
+  }
+
+  .user-menu {
     display: none;
-  
-  }
-  
-  .menu-list-items a {
-    padding: .3125rem;
-    transition: font-size 0.3s ease;
-  }
-  
-  .menu-list-items a:hover {
-    font-size: 1.25rem;
   }
 
   .img-desktop {
-    width: 100%;
-    object-fit: cover; /* Ajusta a imagem para cobrir o contêiner */
+    display: none;
   }
 
   .img-smart {
-    display: none;
-    object-fit: cover;
+    display: flex;
+    width: 100%;
   }
 
-  
-  @media (max-width: 1024px) {
-    .menu-list{
-      display: flex;
-    }
-  
-    .user-menu {
-      display: none;
-    }
-
-    .img-desktop{
-      display: none;
-    }
-
-    .img-smart {
-      display: flex;
-      width: 100%;
-    }
-
-    
+  .e-bit-div {
+    font-size: 1.125rem;
   }
-  
+}
+
+@media (max-width: 576px) {
+  .e-bit-div {
+    font-size: 0.875rem;
+  }
+}
