--- a/assets/resources/styles/styles.css
+++ b/assets/resources/styles/styles.css
@@ -8,6 +8,10 @@
   --footer-color: #34495e; /* Cor do rodapé */
 }
 
+html {
+  font-family: url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+}
+
 body {
   font-family: Arial, sans-serif;
 }
@@ -20,15 +24,13 @@ header {
   background-color: var(--primary-color);
 }
 
-
 .footer {
   background-color: var(--primary-color);
   color: white;
   text-align: center;
   padding: 10px;
-  position: fixed;
-  bottom: 0;
-  left: 0;
+  height: 3.125rem;
+  bottom: 0%;
+  left: 0%;
   width: 100%;
-  z-index: 1000; /* Garante que o footer fique acima de outros elementos */
 }
