--- a/app/index.css
+++ b/app/index.css
@@ -211,6 +211,20 @@ header i:hover {
   font-size: 1.25rem;
 }
 
+.footer {
+  margin-top: 100px;
+  padding: 10px;
+  background-color: var(--primary-color);
+  color: white;
+  text-align: center;
+  height: 3.125rem;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  position: relative;
+  display: block;
+}
+
 
 @media (max-width: 1300px) {
   .transporte-div {
