--- a/app/pages/cadastro/cadastro.css
+++ b/app/pages/cadastro/cadastro.css
@@ -45,3 +45,17 @@
         width: 100%;
     }
 }
+
+.footer {
+  margin-top: 3.125rem;
+  padding: .625rem;
+  background-color: var(--primary-color);
+  color: white;
+  text-align: center;
+  height: 3.125rem;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  position:static;
+  display: block;
+}
