--- a/assets/resources/styles/styles.css
+++ b/assets/resources/styles/styles.css
@@ -6,6 +6,7 @@
   --text-color: #2c3e50; /* Cor do texto */
   --header-color: #1abc9c; /* Cor do cabeçalho */
   --footer-color: #34495e; /* Cor do rodapé */
+  --green-growth: #53c052;
 }
 
 html {
@@ -24,14 +25,7 @@ header {
   background-color: var(--primary-color);
 }
 
-.footer {
-  margin-top: 100px;
-  background-color: var(--primary-color);
-  color: white;
-  text-align: center;
-  padding: 10px;
-  height: 3.125rem;
-  bottom: 0%;
-  left: 0%;
-  width: 100%;
+.arrow-voltar {
+  font-size: 2.5rem;
+  margin-left: 1.875rem;
 }
