--- a/app/index.css
+++ b/app/index.css
@@ -16,7 +16,7 @@
 }
 
 header i {
-  font-size: 30px;
+  font-size: 1.875rem;
 }
 
 header i:hover {
@@ -24,14 +24,8 @@ header i:hover {
   font-size: 2.5rem;
 }
 
-.navbar-roll {
-  top: 0;
-  position: fixed;
-  width: 100%;
-  z-index: 1000;
-}
 .navbar img {
-  height: 50px; /* Ajuste a altura da imagem conforme necessário */
+  height: 2.5rem; /* Ajuste a altura da imagem conforme necessário */
 }
 
 .menu-list {
@@ -67,7 +61,7 @@ header i:hover {
 }
 
 .suplemento p {
-  margin-top: 10px;
+  margin-top: .625rem;
   text-align: center;
 }
 
@@ -84,10 +78,10 @@ header i:hover {
 .section-client {
   margin-top: 6.25rem;
   background: linear-gradient(
-    white 100px,
-    var(--primary-color) 100px,
-    var(--primary-color) 150px,
-    var(--primary-color) 150px
+    white 6.25rem,
+    var(--primary-color) 6.25rem,
+    var(--primary-color) 9.375rem,
+    var(--primary-color) 9.375rem
   );
 }
 
@@ -116,17 +110,22 @@ header i:hover {
 }
 
 .transporte-div img {
-  height: 12.5rem;
+  height: 9.375rem;
+}
+
+.dinheiro-volta-div img {
+  height: 10.625rem;
+  max-height: 10rem;
 }
 
 .frete-gratis-div,
 .dinheiro-volta-div {
-  padding: 0px 35px;
+  padding: 0rem 2.1875rem;
   background: linear-gradient(
-    white 20px,
-    #53c052 20px,
-    #53c052 180px,
-    white 20px
+    white 1.25rem,
+    #53c052 1.25rem,
+    #53c052 11.25rem,
+    white 1.25rem
   );
   display: flex;
   align-items: center;
@@ -135,15 +134,15 @@ header i:hover {
 
 .dinheiro-volta-div {
   background: linear-gradient(
-    white 20px,
-    var(--primary-color) 20px,
-    var(--primary-color) 180px,
-    white 20px
+    white 1.25rem,
+    var(--primary-color) 1.25rem,
+    var(--primary-color) 11.25rem,
+    white 1.25rem
   );
 }
 
 .text-container {
-  padding: 50px;
+  padding: 3.125rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -152,7 +151,7 @@ header i:hover {
 }
 
 .text-container p {
-  margin-top: 10px;
+  margin-top: .625rem;
 }
 
 
@@ -212,8 +211,8 @@ header i:hover {
 }
 
 .footer {
-  margin-top: 100px;
-  padding: 10px;
+  margin-top: 6.25rem;
+  padding: .625rem;
   background-color: var(--primary-color);
   color: white;
   text-align: center;
