--- a/app/pages/login/login.css
+++ b/app/pages/login/login.css
@@ -14,7 +14,7 @@
 }
 
 .card {
-  border: 3px solid var(--primary-color);
+  border: .1875rem solid var(--primary-color);
 }
 
 .card h2 {
@@ -49,7 +49,7 @@
 
 .footer {
   /* margin-top: 100px; */
-  padding: 10px;
+  padding: .625rem;
   background-color: var(--primary-color);
   color: white;
   text-align: center;
