--- a/app/index.css
+++ b/app/index.css
@@ -229,6 +229,31 @@ header i:hover {
 }
 
 
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.cart-item img {
+  width: 50px;
+  height: 50px;
+}
+.cart-item-details {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+}
+.cart-item-controls {
+  display: flex;
+  align-items: center;
+}
+.cart-item-controls input {
+  width: 50px;
+  margin: 0 5px;
+}
+
+
 @media (max-width: 1300px) {
   .transporte-div {
     display: none;
